# gwanderer

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  README3.2  TODO  acconfig.h  autogen.sh  configure.in  gwanderer.desktop
doc/C/: Makefile.am  gwanderer.sgml  help.c
pixmaps/: Makefile.am
po/: ChangeLog  POTFILES.in  ru.po  update.pl  update.sh
src/: Makefile.am  app.c  app.h  fall.c  game.c  game.h  gbdefs.h  graphics.c  graphics.h  gwanderer.c  gwanderer.h  menu.c  menus.c  menus.h  monsters.c  play.c  properties.c  read.c  sound.h  statusbar.c  statusbar.h
